syntax = "proto3";

package seller;

service SellerService {
  rpc GetSeller (GetSellerRequest) returns (Seller) {}
}

message GetSellerRequest {
  int32 id = 1;
}

message Seller {
  int32 id = 1;
  string shopName = 2;
  int32 taxCode = 3;
  string sellerType = 4;
  repeated string email = 5;
  int32 followers = 6;
  string createdAt = 7;
  string updatedAt = 8;
}